WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170026
SVG animations are not paused when inserted into a hidden page
https://bugs.webkit.org/show_bug.cgi?id=170026
Summary
SVG animations are not paused when inserted into a hidden page
Chris Dumez
Reported
2017-03-23 14:50:58 PDT
SVG animations are not paused when inserted into a hidden page.
Attachments
Patch
(14.71 KB, patch)
2017-03-23 14:57 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.00 KB, patch)
2017-03-23 15:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-03-23 14:53:19 PDT
<
rdar://problem/31228704
>
Chris Dumez
Comment 2
2017-03-23 14:57:08 PDT
Created
attachment 305228
[details]
Patch
Andreas Kling
Comment 3
2017-03-23 15:14:29 PDT
Comment on
attachment 305228
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=305228&action=review
> Source/WebCore/svg/SVGDocumentExtensions.h:80 > - Document* m_document; // weak reference > + Document& m_document; // weak reference
Maybe we can live without the comment.
Chris Dumez
Comment 4
2017-03-23 15:19:24 PDT
Created
attachment 305229
[details]
Patch
Chris Dumez
Comment 5
2017-03-23 15:41:31 PDT
<
https://trac.webkit.org/r214322
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug