Source/WebCore/svg/SVGDocumentExtensions.h
@@ -40,7 +40,7 @@ class SVGDocumentExtensions {
     WTF_MAKE_NONCOPYABLE(SVGDocumentExtensions); WTF_MAKE_FAST_ALLOCATED;
 public:
     typedef HashSet<Element*> PendingElements;
-    explicit SVGDocumentExtensions(Document*);
+    explicit SVGDocumentExtensions(Document&);
     ~SVGDocumentExtensions();
     
     void addTimeContainer(SVGSVGElement*);
@@ -77,7 +77,7 @@ public:
 #endif
 
 private:
-    Document* m_document; // weak reference
+    Document& m_document;
     HashSet<SVGSVGElement*> m_timeContainers; // For SVG 1.2 support this will need to be made more general.
 #if ENABLE(SVG_FONTS)
     HashSet<SVGFontFaceElement*> m_svgFontFaceElements;
@@ -89,7 +89,7 @@ private:
     std::unique_ptr<SVGResourcesCache> m_resourcesCache;
 
     Vector<SVGElement*> m_rebuildElements;
-    bool m_areAnimationsPaused { false }; // For testing.
+    bool m_areAnimationsPaused;
 
 public:
     // This HashMap contains a list of pending resources. Pending resources, are such
